--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
     "class-validator": "^0.14.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "stripe": "^18.5.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
