--- a/backend/package.json
+++ b/backend/package.json
@@ -81,6 +81,14 @@
     "collectCoverageFrom": [
       "**/*.(t|j)s"
     ],
+    "coveragePathIgnorePatterns": [
+      ".*\\.module\\.ts$",
+      ".*\\.dto\\.ts$",
+      ".*\\.entity\\.ts$",
+      "main.ts",
+      "utils",
+      "prisma"
+    ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
   }
